[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["serde", "v4"] }
bcrypt = "0.15"
jsonwebtoken = "8.3"
time = { version = "0.3", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
csv = "1.2"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
